language-server/src/tests/snapshots/gleam_language_server__tests__action__inexhaustive_let_to_case_discard.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let [_elem] = [6]\n}"
---
----- BEFORE ACTION
pub fn main() {
  let [_elem] = [6]
  ▔▔▔▔▔▔▔▔▔▔▔▔↑    
}


----- AFTER ACTION
pub fn main() {
  let _ = case [6] {
    [_elem] -> Nil
    [] -> todo
    [_, _, ..] -> todo
  }
}
