language-server/src/tests/snapshots/gleam_language_server__tests__action__inexhaustive_let_to_case_indented.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main(result) {\n  {\n    let Ok(value) = result\n  }\n}"
---
----- BEFORE ACTION
pub fn main(result) {
  {
    let Ok(value) = result
    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑       
  }
}


----- AFTER ACTION
pub fn main(result) {
  {
    let value = case result {
      Ok(value) -> value
      Error(_) -> todo
    }
  }
}
