language-server/src/tests/snapshots/gleam_language_server__tests__action__inexhaustive_let_tuple_to_case.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let #(first, 10, third) = #(5, 10, 15)\n}\n"
---
----- BEFORE ACTION
pub fn main() {
  let #(first, 10, third) = #(5, 10, 15)
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑             
}


----- AFTER ACTION
pub fn main() {
  let #(first, third) = case #(5, 10, 15) {
    #(first, 10, third) -> #(first, third)
    #(_, _, _) -> todo
  }
}
