language-server/src/tests/snapshots/gleam_language_server__tests__action__inline_constant_usage_from_another_module_constant_qualified.snap
---
source: language-server/src/tests/action.rs
expression: "import other\npub const wobble = other.wibble"
---
----- BEFORE ACTION
import other
pub const wobble = other.wibble
                         ↑     


----- AFTER ACTION
import other
pub const wobble = 100
