language-server/src/tests/snapshots/gleam_language_server__tests__action__inline_constant_usage_from_another_module_constant_unqualified.snap
---
source: language-server/src/tests/action.rs
expression: "import other.{wibble}\npub const wobble = wibble"
---
----- BEFORE ACTION
import other.{wibble}
pub const wobble = wibble
                   ↑     


----- AFTER ACTION
import other.{wibble}
pub const wobble = 100
