language-server/src/tests/snapshots/gleam_language_server__tests__action__inline_constant_usage_from_another_module_guard_qualified.snap
---
source: language-server/src/tests/action.rs
expression: "import other\n\npub fn main(x) {\n  case x {\n    a if a > other.wibble -> True\n    _ -> False\n  }\n}"
---
----- BEFORE ACTION
import other

pub fn main(x) {
  case x {
    a if a > other.wibble -> True
                   ↑             
    _ -> False
  }
}


----- AFTER ACTION
import other

pub fn main(x) {
  case x {
    a if a > 100 -> True
    _ -> False
  }
}
