language-server/src/tests/snapshots/gleam_language_server__tests__action__inline_constant_usage_from_dependency_expression_qualified.snap
---
source: language-server/src/tests/action.rs
expression: "import other\n\npub fn main() {\n  echo other.wibble\n}"
---
----- BEFORE ACTION
import other

pub fn main() {
  echo other.wibble
             ↑     
}


----- AFTER ACTION
import other

pub fn main() {
  echo 100
}
