language-server/src/tests/snapshots/gleam_language_server__tests__action__inline_constant_usage_from_dependency_expression_unqualified.snap
---
source: language-server/src/tests/action.rs
expression: "import other.{wibble}\n\npub fn main() {\n  echo wibble\n}"
---
----- BEFORE ACTION
import other.{wibble}

pub fn main() {
  echo wibble
       ↑     
}


----- AFTER ACTION
import other.{wibble}

pub fn main() {
  echo 100
}
